turning in homework assignment 2 responsive portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,29 +28,29 @@
             <h1>Portfolio</h1>
             <hr>
         <div class="portcontainer">
-            <div class="hangportplaceholder">
-                <h4 id="hangman" class="portplaceholder">Hangman</h4>
-                <img src="assets/images/hangman.jpg" alt="hangman project placeholder image" class="portplaceholder">
+            <div class="portplaceholder">
+                <h4>Hangman</h4>
+                <img src="assets/images/hangman.jpg" alt="hangman project placeholder image">
             </div>
 
-            <div class="rgbportplaceholder">
-                <h4 id="rpg" class="portplaceholder">RPG Game</h4>
-                <img src="assets/images/rpg.jpg" alt="r p g game project placeholder image" class="portplaceholder">
+            <div class="portplaceholder">
+                <h4>RPG Game</h4>
+                <img src="assets/images/rpg.jpg" alt="r p g game project placeholder image">
             </div>
 
-            <div class="triviaportplaceholder">
-                <h4 id="trivia" class="portplaceholder">Trivia Game</h4>
-                <img src="assets/images/trivia.jpg" alt="trivia game project placeholder image" class="portplaceholder">
+            <div class="portplaceholder">
+                <h4>Trivia Game</h4>
+                <img src="assets/images/trivia.jpg" alt="trivia game project placeholder image">
             </div>
 
-            <div class="rutgersportplaceholder">
-                <h4 id="rutgers" class="portplaceholder">Rutgers Info Widget</h4>
-                <img src="assets/images/rutgers.jpg" alt="rutgers info widget placeholder image" class="portplaceholder">
+            <div class="portplaceholder">
+                <h4>Rutgers Info Widget</h4>
+                <img src="assets/images/rutgers.jpg" alt="rutgers info widget placeholder image">
             </div>
 
-            <div class="rockportplaceholder">
-                <h4 id="rock" class="portplaceholder">Rock Paper Scissors</h4>
-                <img src="assets/images/rock.jpg" alt="rock paper scissors project placeholder image" class="portplaceholder">
+            <div class="portplaceholder">
+                <h4>Rock Paper Scissors</h4>
+                <img src="assets/images/rock.jpg" alt="rock paper scissors project placeholder image">
             </div>
         </div>   
         </section>
