adding psychic game and number game as active links to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,12 @@
             <hr>
         <div class="portcontainer">
             <div class="portplaceholder">
-                <h4>Hangman</h4>
+                <a href="https://rhoang57.github.io/Psychic-Game"><h4>Psychic Game</h4></a>
                 <img src="assets/images/hangman.jpg" alt="hangman project placeholder image">
             </div>
 
             <div class="portplaceholder">
-                <h4>RPG Game</h4>
+                <a href="https://rhoang57.github.io/unit-4-game/"><h4>Number Game</h4></a>
                 <img src="assets/images/rpg.jpg" alt="r p g game project placeholder image">
             </div>
 
