replaced images for portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
         <div class="portcontainer">
             <div class="portplaceholder">
                 <a href="https://rhoang57.github.io/Psychic-Game"><h4>Psychic Game</h4></a>
-                <img src="assets/images/hangman.jpg" alt="hangman project placeholder image">
+                <img src="assets/images/psychic-game.jpg" alt="psychic game project placeholder image">
             </div>
 
             <div class="portplaceholder">
                 <a href="https://rhoang57.github.io/unit-4-game/"><h4>Number Game</h4></a>
-                <img src="assets/images/rpg.jpg" alt="r p g game project placeholder image">
+                <img src="assets/images/number-game.jpg" alt="number game project placeholder image">
             </div>
 
             <div class="portplaceholder">
