updated portfolio page to include trivia game link

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="portplaceholder">
-                <h4>Trivia Game</h4>
+                <a href="https://rhoang57.github.io/TriviaGame/"><h4>Trivia Game</h4></a>
                 <img src="assets/images/trivia.jpg" alt="trivia game project placeholder image">
             </div>
 
