update to add giphy api app to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,8 +44,8 @@
             </div>
 
             <div class="portplaceholder">
-                <h4>Rutgers Info Widget</h4>
-                <img src="assets/images/rutgers.jpg" alt="rutgers info widget placeholder image">
+                <h4>Giphy API App</h4>
+                <img src="assets/images/giphy-api.gif" alt="giphy api app placeholder image">
             </div>
 
             <div class="portplaceholder">
