update to train schedule and giphy api links on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,13 +44,13 @@
             </div>
 
             <div class="portplaceholder">
-                <h4>Giphy API App</h4>
+                <a href="https://rhoang57.github.io/GiphyApi-App/"><h4>Giphy API App</h4></a>
                 <img src="assets/images/giphy-api.gif" alt="giphy api app placeholder image">
             </div>
 
             <div class="portplaceholder">
-                <h4>Rock Paper Scissors</h4>
-                <img src="assets/images/rock.jpg" alt="rock paper scissors project placeholder image">
+                <a href="https://rhoang57.github.io/Firebase-Train-Scheduler/"><h4>Train Scheduler App</h4></a>
+                <img src="assets/images/train-scheduler.jpg" alt="train scheduler app placeholder image">
             </div>
         </div>   
         </section>
